--- a/styles.css
+++ b/styles.css
@@ -83,13 +83,14 @@ h1, h2, h3 {
 /* ============================= */
 
 .back-button-container {
-  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px 0 30px;
 }
 
 .back-button {
-  justify-content: center;
-  width: 80px;
-  height: 40px;
+  width: 40px;
+  height: 20px;
 }
 
 /* ============================= */
