--- a/styles.css
+++ b/styles.css
@@ -85,12 +85,13 @@ h1, h2, h3 {
 .back-button-container {
   display: flex;
   justify-content: center;
-  margin-bottom: 20px 0 30px;
+  align-items: center;
+  margin: 20px 0 30px;
 }
 
 .tile.back-button {
-  width: 40px;
-  height: 20px;
+  width: 160px;
+  height: 50px;
 }
 
 /* ============================= */
